# nand_programmer

./: .gitignore
firmware_pico/: CMakeLists.txt  dev_lowlevel_loopback.py  usb_handler.py
firmware_pico/src/: main.c  tusb_config.h  usb_descriptors.c
